--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "jquery": "^3.3.1",
     "nuxt": "1.4.0"
   },
   "devDependencies": {
